<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_info"
            android:icon="@mipmap/ic_info"
            android:title="@string/txt_heart"/>
        <item
            android:id="@+id/nav_questionnaires"
            android:icon="@mipmap/ic_playlist"
            android:title="@string/txt_questionnaires" />
        <item
            android:id="@+id/nav_stats"
            android:icon="@mipmap/ic_equalizer"
            android:title="@string/txt_stats" />
        <item
            android:id="@+id/nav_sign_off"
            android:icon="@mipmap/ic_power"
            android:title="@string/txt_sign_off" />
    </group>
    <item android:title="@string/txt_advanced">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@mipmap/ic_settings"
                android:title="@string/txt_settings" />
            <item
                android:id="@+id/nav_unsubscribe"
                android:icon="@mipmap/ic_delete"
                android:title="@string/txt_unsubscribe" />
        </menu>
    </item>
</menu>
