<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/matchmatch"
    android:background="@color/dark_gray"
    tools:context=".Anatomy">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:id="@+id/anatomy_home"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TableLayout
                style="@style/matchmatch"
                android:layout_gravity="center_vertical">
                <TableRow>
                    <Button
                        android:layout_height="match_parent"
                        android:layout_margin="@dimen/Margin_10dp"
                        android:layout_weight="1"
                        android:background="@color/green"
                        android:paddingBottom="@dimen/Long_35dp"
                        android:paddingTop="@dimen/Long_35dp"
                        android:text="Cavidades \n Cardiacas"
                        android:textColor="@color/white" />
                    <Button
                        android:layout_height="match_parent"
                        android:layout_margin="@dimen/Margin_10dp"
                        android:layout_weight="1"
                        android:background="@color/green"
                        android:paddingBottom="@dimen/Long_35dp"
                        android:paddingTop="@dimen/Long_35dp"
                        android:text="Válvulas \n Cardiacas"
                        android:textColor="@color/white" />
                </TableRow>
                <TableRow android:layout_weight="1">
                    <Button
                        android:layout_height="match_parent"
                        android:layout_margin="@dimen/Margin_10dp"
                        android:layout_weight="1"
                        android:background="@color/green"
                        android:paddingBottom="@dimen/Long_35dp"
                        android:paddingTop="@dimen/Long_35dp"
                        android:text="Estructura \n del corazón"
                        android:textColor="@color/white" />
                    <Button
                        android:layout_height="match_parent"
                        android:layout_margin="@dimen/Margin_10dp"
                        android:layout_weight="1"
                        android:background="@color/green"
                        android:paddingBottom="@dimen/Long_35dp"
                        android:paddingTop="@dimen/Long_35dp"

                        android:text="El endocardio"
                        android:textColor="@color/white" />
                </TableRow>
                <TableRow android:layout_weight="1">
                    <Button
                        android:layout_height="match_parent"
                        android:layout_margin="@dimen/Margin_10dp"
                        android:layout_weight="1"
                        android:background="@color/green"
                        android:paddingBottom="@dimen/Long_35dp"
                        android:paddingTop="@dimen/Long_35dp"
                        android:text="El miocardio"
                        android:textColor="@color/white" />
                    <Button
                        android:layout_height="match_parent"
                        android:layout_margin="@dimen/Margin_10dp"
                        android:layout_weight="1"
                        android:background="@color/green"
                        android:paddingBottom="@dimen/Long_35dp"
                        android:paddingTop="@dimen/Long_35dp"
                        android:text="El epicardio"
                        android:textColor="@color/white" />
                </TableRow>
            </TableLayout>
        </RelativeLayout>
        <LinearLayout
            android:id="@+id/anatomy_t1"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                style="@style/Title"
                android:text="@string/txt_Anatomy"/>
            <TextView
                style="@style/TextView_sub"
                android:text="@string/txt_anatomy_sub1"/>
            <TextView
                style="@style/TextView_txt"
                android:text="@string/txt_anatomy_txt1"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/anatomy_t2"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                style="@style/Title"
                android:text="@string/txt_Anatomy"/>
            <TextView
                style="@style/TextView_sub"
                android:text="@string/txt_anatomy_sub2"/>
            <TextView
                style="@style/TextView_txt"
                android:text="@string/txt_anatomy_txt2"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/anatomy_t3"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                style="@style/Title"
                android:text="@string/txt_Anatomy"/>
            <TextView
                style="@style/TextView_sub"
                android:text="@string/txt_anatomy_sub3"/>
            <TextView
                style="@style/TextView_txt"
                android:text="@string/txt_anatomy_txt3"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/anatomy_t4"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                style="@style/Title"
                android:text="@string/txt_Anatomy"/>
            <TextView
                style="@style/TextView_sub"
                android:text="@string/txt_anatomy_sub4"/>
            <TextView
                style="@style/TextView_txt"
                android:text="@string/txt_anatomy_txt4"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/anatomy_t5"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                style="@style/Title"
                android:text="@string/txt_Anatomy"/>
            <TextView
                style="@style/TextView_sub"
                android:text="@string/txt_anatomy_sub5"/>
            <TextView
                style="@style/TextView_txt"
                android:text="@string/txt_anatomy_txt5"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/anatomy_t6"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                style="@style/Title"
                android:text="@string/txt_Anatomy"/>
            <TextView
                style="@style/TextView_sub"
                android:text="@string/txt_anatomy_sub6"/>
            <TextView
                style="@style/TextView_txt"
                android:text="@string/txt_anatomy_txt6"/>
        </LinearLayout>
    </FrameLayout>
</ScrollView>