<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/matchmatch"
    android:orientation="vertical"
    tools:context=".Settings">
    <TextView
        android:id="@+id/txt_settings"
        style="@style/Title"
        android:text="@string/txt_settings" />
    <ScrollView
        style="@style/matchmatch">
        <RelativeLayout
            android:layout_gravity="center"
            android:layout_marginTop="-22dp"
            style="@style/matchmatch">
            <android.support.v7.widget.CardView
                style="@style/CardView_settings"
                app:cardElevation="@dimen/Margin_10dp"
                app:cardUseCompatPadding="true">
                <LinearLayout
                    style="@style/warpwarp"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">
                    <TableLayout
                        android:id="@+id/profile_data_table"
                        style="@style/warpwarp"
                        android:padding="@dimen/Margin_10dp">
                        <TableRow>
                            <TextView android:text="@string/txt_name" />
                            <EditText
                                android:id="@+id/settings_name"
                                style="@style/Edit_settings"
                                android:inputType="text"
                                android:text="" />
                        </TableRow>
                        <TableRow>
                            <TextView android:text="@string/txt_user" />
                            <EditText
                                android:id="@+id/settings_user"
                                style="@style/Edit_settings"
                                android:inputType="text"
                                android:text="" />
                        </TableRow>
                        <TableRow>
                            <TextView android:text="@string/txt_email" />
                            <EditText
                                android:id="@+id/settings_email"
                                style="@style/Edit_settings"
                                android:inputType="textEmailAddress"
                                android:text="" />
                        </TableRow>
                        <TableRow>
                            <TextView android:text="@string/txt_password" />
                            <EditText
                                android:id="@+id/settings_password"
                                style="@style/Edit_settings"
                                android:text="" />
                        </TableRow>
                    </TableLayout>
                    <Button
                        android:id="@+id/btn_data_save"
                        style="@style/warpwarp"
                        android:layout_marginTop="@dimen/Long_35dp"
                        android:text="@string/txt_save" />
                </LinearLayout>
            </android.support.v7.widget.CardView>
        </RelativeLayout>
    </ScrollView>
</LinearLayout>